tests/snapshots/snapshots__javascript_sample_level2.snap
---
source: tests/snapshots.rs
expression: output
---
sample.js
     2→export function processItems(items) {
     6→function helper() {}
     8→export class TokenParser {
     9→    constructor(input) {
    13→    parse() {
    17→    #advance() {}
    20→export const MAX_TOKENS = 1024;
    22→export default class DefaultExport {
