tests/snapshots/snapshots__javascript_sample_level3.snap
---
source: tests/snapshots.rs
expression: output
---
sample.js
     7→export function processItems(items) {
    11→function helper
    16→export class TokenParser {
    17→    constructor(input) {
    21→    parse() {
    25→    #advance
    28→export const MAX_TOKENS = 1024;
    30→export default class DefaultExport {
