tests/snapshots/snapshots__javascript_sample_level4.snap
---
source: tests/snapshots.rs
expression: output
---
sample.js
     3→ * Process all items and return the total count.
     7→export function processItems(items) {
    11→function helper() {}
    14→ * A parser that tokenizes input strings.
    16→export class TokenParser {
    17→    constructor(input) {
    21→    parse() {
    25→    #advance() {}
    28→export const MAX_TOKENS = 1024;
    30→export default class DefaultExport {
