tests/snapshots/snapshots__javascript_sample_snapshot.snap
---
source: tests/snapshots.rs
expression: output
---
sample.js
     7→export function processItems
    16→export class TokenParser
    17→    constructor
    21→    parse
    28→export const MAX_TOKENS
    30→export default class DefaultExport
