tests/snapshots/snapshots__json_sample_budget_10000.snap
---
source: tests/snapshots.rs
expression: output
---
package.json
     2→  "name": "@example/toolkit",
     3→  "version": "2.0.0",
     4→  "description": "A toolkit for building CLI applications",
     5→  "main": "dist/index.js",
     6→  "types": "dist/index.d.ts",
     7→  "scripts": {
     8→    "build": "tsc",
     9→    "test": "jest --coverage",
    10→    "lint": "eslint src/",
    11→    "prepare": "npm run build"
    12→  },
    13→  "dependencies": {
    14→    "chalk": "^5.3.0",
    15→    "commander": "^12.0.0",
    16→    "fs-extra": "^11.0.0"
    17→  },
    18→  "devDependencies": {
    19→    "@types/node": "^20.0.0",
    20→    "jest": "^29.0.0",
    21→    "typescript": "^5.0.0",
    22→    "eslint": "^9.0.0"
    23→  },
    24→  "repository": {
    25→    "type": "git",
    26→    "url": "https://github.com/example/toolkit.git"
    27→  },
    28→  "keywords": ["cli", "toolkit", "typescript"],
    29→  "license": "MIT"
    30→}
