tests/snapshots/snapshots__json_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
package.json
     2→  "name": "@example/toolkit",
     3→  "version": "2.0.0",
     4→  "description": "A toolkit for building CLI applications",
     5→  "main": "dist/index.js",
     6→  "types": "dist/index.d.ts",
     7→  "scripts": {
    13→  "dependencies": {
    18→  "devDependencies": {
    24→  "repository": {
    28→  "keywords": ["cli", "toolkit", "typescript"],
    29→  "license": "MIT"
