tests/snapshots/snapshots__lua_sample_budget_10000.snap
---
source: tests/snapshots.rs
expression: output
---
init.lua
     2→local M …
     4→--- Process items and return the total count.
     5→--- @param items table List of items to process.
     6→--- @return number count The total count.
     7→function M.process(items)
     8→    local count = 0
     9→    for _, item in ipairs(items) do
    10→        count = count + 1
    11→    end
    12→    return count
    13→end
    15→local function helper()
    16→    return nil
    17→end
    19→--- A token with its kind and source span.
    20→--- @class Token
    21→--- @field kind string
    22→--- @field span table
    23→local Token …
    24→Token.__index …
    26→function Token:new(kind, span)
    27→    return setmetatable({ kind = kind, span = span }, self)
    28→end
    30→--- Get the display string for this token.
    31→function Token:display()
    32→    return string.format("%s:%d-%d", self.kind, self.span[1], self.span[2])
    33→end
    35→--- Create a parser for the given source text.
    36→function M.new_parser(source)
    37→    return {
    38→        source = source,
    39→        tokens = {},
    40→        parse = function(self)
    41→            return self.tokens
    42→        end,
    43→    }
    44→end
    46→M.MAX_TOKENS …
    48→M.VERSION …
