tests/snapshots/snapshots__lua_sample_budget_20.snap
---
source: tests/snapshots.rs
expression: output
---
init.lua
    15→local function helper …
    26→function Token:new …
