tests/snapshots/snapshots__lua_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
init.lua
     2→local M = {}
     4→--- Process items and return the total count.
      →…
     7→function M.process(items)
     8→    local count = 0
    15→local function helper …
    23→local Token = {}
    24→Token.__index = Token
    26→function Token:new …
    30→--- Get the display string for this token.
    31→function Token:display()
    32→    return string.format("%s:%d-%d", self.kind, self.span[1], self.span[2])
    35→--- Create a parser for the given source text.
    36→function M.new_parser(source)
    37→    return {
    46→M.MAX_TOKENS = 1024
    48→M.VERSION = "0.1.0"
