tests/snapshots/snapshots__lua_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
init.lua
     7→function M.process …
    15→local function helper …
    26→function Token:new …
    31→function Token:display …
    36→function M.new_parser …
