tests/snapshots/snapshots__markdown_sample_budget_10000.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     1→# precis
     3→A CLI tool that extracts a token-efficient summary of a codebase.
     5→## Installation
     7→```bash
     8→cargo install precis
     9→```
    11→## Usage
    13→### Basic Usage
    15→Run on a directory to get a summary:
    16→
    17→```
    18→precis ./src
    19→```
    21→### Options
    23→| Flag | Description |
    24→|------|-------------|
    25→| `--budget` | Word budget for output |
    26→| `--json` | Output as JSON |
    28→## Supported Languages
    30→- Rust
    31→- TypeScript / JavaScript
    32→- Python
    33→- Markdown
    35→### Adding a New Language
    37→1. Add a tree-sitter grammar dependency
    38→2. Create a query file in `queries/`
    39→3. Update `walk.rs` and `parse.rs`
    41→## Contributing
    43→Pull requests welcome! Please run tests before submitting.
    45→## License
    47→MIT
